k8s/datasci/bandit/app/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bandit-service
  namespace: datasci
  labels:
    app.kubernetes.io/name: bandit
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bandit
    app.kubernetes.io/component: service
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
